Header da parte do usuário atualizado

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -130,7 +130,7 @@
                 });
 
             } else {
-                alert('Você não possui uma conta.')
+                alert('Você não possui uma conta ou colocou seu email/ senha incorretos')
                 console.log("Houve um erro ao tentar realizar o login!");
 
                 resposta.text().then(texto => {
