--- a/site/public/paginaUsuario.html
+++ b/site/public/paginaUsuario.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <div class="header" style="z-index: 100; overflow-y: hidden; border-bottom: 1px solid rgb(161, 161, 161, 0.5); box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.25);">
+        <!-- <div class="header" style="z-index: 100; overflow-y: hidden; border-bottom: 1px solid rgb(161, 161, 161, 0.5); box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.25);">
             <div class="container">
                 <a href="paginaUsuario.html"><img style="width: 90%; height: 54%;" src="img/Logo e nome.png" alt="Logo"></a>
                 <div class="perfil">
@@ -21,6 +21,21 @@
                         <a href="index.html">Logout</a>
                     </div>
                 </div>
+            </div>
+        </div> -->
+        <div class="header" style="z-index: 100;border-bottom: 1px solid rgb(161, 161, 161, 0.5); box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.25);">
+            <div class="container">
+                <a href="index.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
+                    <ul class="navBarUsuario">
+                        <li><a href="simulacao.html">Questionário</a></li>
+                        <li><a href="simulacao.html">Simulação</a></li>
+                    </ul>
+                    <div class="perfil">
+                        <div class="boasVindas">
+                            <p>Olá, <span id="nomeUsuario">usuário</span>!</p>
+                            <a href="index.html">Logout</a>
+                        </div>
+                    </div>
             </div>
         </div>
         <div class="pedido">
@@ -35,14 +50,14 @@
                     <div class="flex">
                         <p>Post 01</p>
                         <div class="botao">
-                            <button onclick="like1()" >Curtir
-                                    <div id="numero" >0</div>
-                                    <div id="coracao" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like1()">Curtir
+                                <div id="numero">0</div>
+                                <div id="coracao" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -54,14 +69,14 @@
                     <div class="flex">
                         <p>Post 02</p>
                         <div class="botao">
-                            <button onclick="like2()" >Curtir
-                                    <div id="numero2" >0</div>
-                                    <div id="coracao2" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa2" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like2()">Curtir
+                                <div id="numero2">0</div>
+                                <div id="coracao2" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa2" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -73,14 +88,14 @@
                     <div class="flex">
                         <p>Post 03</p>
                         <div class="botao">
-                            <button onclick="like3()" >Curtir
-                                    <div id="numero3" >0</div>
-                                    <div id="coracao3" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa3" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like3()">Curtir
+                                <div id="numero3">0</div>
+                                <div id="coracao3" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa3" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -94,14 +109,14 @@
                     <div class="flex">
                         <p>Post 04</p>
                         <div class="botao">
-                            <button onclick="like4()" >Curtir
-                                    <div id="numero4" >0</div>
-                                    <div id="coracao4" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa4" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like4()">Curtir
+                                <div id="numero4">0</div>
+                                <div id="coracao4" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa4" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -113,14 +128,14 @@
                     <div class="flex">
                         <p>Post 05</p>
                         <div class="botao">
-                            <button onclick="like5()" >Curtir
-                                    <div id="numero5" >0</div>
-                                    <div id="coracao5" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa5" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like5()">Curtir
+                                <div id="numero5">0</div>
+                                <div id="coracao5" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa5" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -132,14 +147,14 @@
                     <div class="flex">
                         <p>Post 06</p>
                         <div class="botao">
-                            <button onclick="like6()" >Curtir
-                                    <div id="numero6" >0</div>
-                                    <div id="coracao6" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa6" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like6()">Curtir
+                                <div id="numero6">0</div>
+                                <div id="coracao6" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa6" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -153,14 +168,14 @@
                     <div class="flex">
                         <p>Post 07</p>
                         <div class="botao">
-                            <button onclick="like7()" >Curtir
-                                    <div id="numero7" >0</div>
-                                    <div id="coracao7" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa7" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like7()">Curtir
+                                <div id="numero7">0</div>
+                                <div id="coracao7" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa7" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -172,14 +187,14 @@
                     <div class="flex">
                         <p>Post 08</p>
                         <div class="botao">
-                            <button onclick="like8()" >Curtir
-                                    <div id="numero8" >0</div>
-                                    <div id="coracao8" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa8" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like8()">Curtir
+                                <div id="numero8">0</div>
+                                <div id="coracao8" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa8" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -191,14 +206,14 @@
                     <div class="flex">
                         <p>Post 09</p>
                         <div class="botao">
-                            <button onclick="like9()" >Curtir
-                                    <div id="numero9" >0</div>
-                                    <div id="coracao9" style="display: block;">
-                                        <img  src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
-                                    </div>
-                                    <div id="coracaoRosa9" style="display: none;">
-                                        <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
-                                    </div>
+                            <button onclick="like9()">Curtir
+                                <div id="numero9">0</div>
+                                <div id="coracao9" style="display: block;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao.png" alt="coracao">
+                                </div>
+                                <div id="coracaoRosa9" style="display: none;">
+                                    <img src="img/silhueta-de-formato-simples-de-coracao (1).png" alt="coracao">
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -253,118 +268,118 @@
         click++;
         numero.innerHTML = click;
         coracao.style.display = 'none';
-        coracaoRosa.style.display = 'block'; 
+        coracaoRosa.style.display = 'block';
 
         if (click > 1) {
             click = 0
             numero.innerHTML = 0;
             coracao.style.display = 'block';
-            coracaoRosa.style.display = 'none'; 
+            coracaoRosa.style.display = 'none';
         }
     }
     function like2() {
         click2++;
         numero2.innerHTML = click2;
         coracao2.style.display = 'none';
-        coracaoRosa2.style.display = 'block'; 
+        coracaoRosa2.style.display = 'block';
 
         if (click2 > 1) {
             numero2.innerHTML = 0;
             click2 = 0
             coracao2.style.display = 'block';
-            coracaoRosa2.style.display = 'none'; 
+            coracaoRosa2.style.display = 'none';
         }
     }
     function like3() {
         click3++;
         numero3.innerHTML = click3;
         coracao3.style.display = 'none';
-        coracaoRosa3.style.display = 'block'; 
+        coracaoRosa3.style.display = 'block';
 
         if (click3 > 1) {
             numero3.innerHTML = 0;
             click3 = 0
             coracao3.style.display = 'block';
-            coracaoRosa3.style.display = 'none'; 
+            coracaoRosa3.style.display = 'none';
         }
     }
     function like4() {
         click4++;
         numero4.innerHTML = click4;
         coracao4.style.display = 'none';
-        coracaoRosa4.style.display = 'block'; 
+        coracaoRosa4.style.display = 'block';
 
         if (click4 > 1) {
             numero4.innerHTML = 0;
             click4 = 0
             coracao4.style.display = 'block';
-            coracaoRosa4.style.display = 'none'; 
+            coracaoRosa4.style.display = 'none';
         }
     }
     function like5() {
         click5++;
         numero5.innerHTML = click5;
         coracao5.style.display = 'none';
-        coracaoRosa5.style.display = 'block'; 
+        coracaoRosa5.style.display = 'block';
 
         if (click5 > 1) {
             numero5.innerHTML = 0;
             click5 = 0
             coracao5.style.display = 'block';
-            coracaoRosa5.style.display = 'none'; 
+            coracaoRosa5.style.display = 'none';
         }
     }
     function like6() {
         click6++;
         numero6.innerHTML = click6;
         coracao6.style.display = 'none';
-        coracaoRosa6.style.display = 'block'; 
+        coracaoRosa6.style.display = 'block';
 
         if (click6 > 1) {
             numero6.innerHTML = 0;
             click6 = 0
             coracao6.style.display = 'block';
-            coracaoRosa6.style.display = 'none'; 
+            coracaoRosa6.style.display = 'none';
         }
     }
     function like7() {
         click7++;
         numero7.innerHTML = click7;
         coracao7.style.display = 'none';
-        coracaoRosa7.style.display = 'block'; 
+        coracaoRosa7.style.display = 'block';
 
         if (click7 > 1) {
             numero7.innerHTML = 0;
             click7 = 0
             coracao7.style.display = 'block';
-            coracaoRosa7.style.display = 'none'; 
+            coracaoRosa7.style.display = 'none';
         }
     }
     function like8() {
         click8++;
         numero8.innerHTML = click8;
         coracao8.style.display = 'none';
-        coracaoRosa8.style.display = 'block'; 
+        coracaoRosa8.style.display = 'block';
 
         if (click8 > 1) {
             numero8.innerHTML = 0;
             click8 = 0
             coracao8.style.display = 'block';
-            coracaoRosa8.style.display = 'none'; 
+            coracaoRosa8.style.display = 'none';
         }
     }
     function like9() {
         click9++;
         numero9.innerHTML = click9;
         coracao9.style.display = 'none';
-        coracaoRosa9.style.display = 'block'; 
+        coracaoRosa9.style.display = 'block';
 
         if (click9 > 1) {
             numero9.innerHTML = 0;
             click9 = 0
             coracao9.style.display = 'block';
-            coracaoRosa9.style.display = 'none'; 
+            coracaoRosa9.style.display = 'none';
         }
     }
-    
+
 </script>
