API conectada à página de simulação e criação da página de votação

--- a/site/public/faq.html
+++ b/site/public/faq.html
@@ -8,6 +8,8 @@
         <title>Unique Style</title>
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/faq.css">
+        <link rel="icon" href="img/logoUS.png">
+
     </head>
 
     <body>
