--- a/site/public/index.html
+++ b/site/public/index.html
@@ -193,17 +193,17 @@
                 </ul>
                 <ul class="contato">
                     <li><i>E-mail</i></li>
-                    <li><p>sofhiautaka@gmail.com</p></li>
+                    <li><p id="email" onclick="copiarEmail()">sofhiautaka@gmail.com</p></li>
                 </ul>
                 <ul class="cards">
-                    <li><img src="img/whats.png" alt="WhatsApp"></li>
-                    <li><img src="img/insta.png" alt="Instagram"></li>
-                    <li><img src="img/linkedin.png" alt="Linkedin"></li>
+                    <a href="https://wa.me/11982781626"><li><img src="img/whats.png" alt="WhatsApp"></li></a>
+                    <a href=""><li><img src="img/insta.png" alt="Instagram"></li></a>
+                    <a href=""><li><img src="img/linkedin.png" alt="Linkedin"></li></a>
                 </ul>
                 <ul class="links">
-                    <li>Sobre Nós</li>
-                    <li>Simulação</li>
-                    <li>FAQs</li>
+                    <a href="#sobreMim"><li>Sobre Mim</li></a>
+                    <a href="#beneficios"><li>Benefícios</li></a>
+                    <a href="faq.html"><li>FAQ</li></a>
                 </ul>
             </div>
         </div>
@@ -251,5 +251,10 @@
         window.location.href = "cadastro.html";
     }
 
-
+    function copiarEmail(){
+        navigator.clipboard.writeText( "sofhiautaka@gmail.com")
+        .then(() => {
+        alert("O email foi copiado para sua área de transferência!");
+      })
+    }
 </script>
