--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="icon" href="img/logoUS.png">
+
 
     </head>
 
@@ -50,25 +52,21 @@
             <div class="footerConteudo">
                 <ul class="marca">
                     <li><img src="img/logoUS.png" alt="Logo"></li>
-                    <li>
-                        <p>© Copyright, todos os direitos reservados</p>
-                    </li>
+                    <li><p>© Copyright, todos os direitos reservados</p></li>
                 </ul>
                 <ul class="contato">
                     <li><i>E-mail</i></li>
-                    <li>
-                        <p>sofhiautaka@gmail.com</p>
-                    </li>
+                    <li><p id="email" onclick="copiarEmail()">sofhiautaka@gmail.com</p></li>
                 </ul>
                 <ul class="cards">
-                    <li><img src="img/whats.png" alt="WhatsApp"></li>
-                    <li><img src="img/insta.png" alt="Instagram"></li>
-                    <li><img src="img/linkedin.png" alt="Linkedin"></li>
+                    <a href="https://wa.me/11982781626"><li><img src="img/whats.png" alt="WhatsApp"></li></a>
+                    <a href=""><li><img src="img/insta.png" alt="Instagram"></li></a>
+                    <a href=""><li><img src="img/linkedin.png" alt="Linkedin"></li></a>
                 </ul>
                 <ul class="links">
-                    <li>Sobre Nós</li>
-                    <li>Simulação</li>
-                    <li>FAQs</li>
+                    <a href="#sobreMim"><li>Sobre Mim</li></a>
+                    <a href="#beneficios"><li>Benefícios</li></a>
+                    <a href="faq.html"><li>FAQ</li></a>
                 </ul>
             </div>
         </div>
@@ -147,6 +145,13 @@
 
             return false;
         }
+    }
+    
+    function copiarEmail(){
+        navigator.clipboard.writeText( "sofhiautaka@gmail.com")
+        .then(() => {
+        alert("O email foi copiado para sua área de transferência!");
+      })
     }
 
 </script>
