--- a/site/public/paginaUsuario.html
+++ b/site/public/paginaUsuario.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/paginaUsuario.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="icon" href="img/logoUS.png">
+
     </head>
 
     <body>
@@ -27,7 +29,7 @@
             <div class="container">
                 <a href="index.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
                     <ul class="navBarUsuario">
-                        <li><a href="simulacao.html">Questionário</a></li>
+                        <li><a href="votacao.html">Votação</a></li>
                         <li><a href="simulacao.html">Simulação</a></li>
                     </ul>
                     <div class="perfil">
@@ -224,25 +226,21 @@
             <div class="footerConteudo">
                 <ul class="marca">
                     <li><img src="img/logoUS.png" alt="Logo"></li>
-                    <li>
-                        <p>© Copyright, todos os direitos reservados</p>
-                    </li>
+                    <li><p>© Copyright, todos os direitos reservados</p></li>
                 </ul>
                 <ul class="contato">
                     <li><i>E-mail</i></li>
-                    <li>
-                        <p>sofhiautaka@gmail.com</p>
-                    </li>
+                    <li><p id="email" onclick="copiarEmail()">sofhiautaka@gmail.com</p></li>
                 </ul>
                 <ul class="cards">
-                    <li><img src="img/whats.png" alt="WhatsApp"></li>
-                    <li><img src="img/insta.png" alt="Instagram"></li>
-                    <li><img src="img/linkedin.png" alt="Linkedin"></li>
+                    <a href="https://wa.me/11982781626"><li><img src="img/whats.png" alt="WhatsApp"></li></a>
+                    <a href=""><li><img src="img/insta.png" alt="Instagram"></li></a>
+                    <a href=""><li><img src="img/linkedin.png" alt="Linkedin"></li></a>
                 </ul>
                 <ul class="links">
-                    <li>Sobre Nós</li>
-                    <li>Simulação</li>
-                    <li>FAQs</li>
+                    <a href="#sobreMim"><li>Sobre Mim</li></a>
+                    <a href="#beneficios"><li>Benefícios</li></a>
+                    <a href="faq.html"><li>FAQ</li></a>
                 </ul>
             </div>
         </div>
@@ -382,4 +380,10 @@
         }
     }
 
+    function copiarEmail(){
+        navigator.clipboard.writeText( "sofhiautaka@gmail.com")
+        .then(() => {
+        alert("O email foi copiado para sua área de transferência!");
+      })
+    }
 </script>
