--- a/site/public/simulacao.html
+++ b/site/public/simulacao.html
@@ -9,14 +9,16 @@
     <link rel="icon" href="img/logoUS.png">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/simulacao.css">
+    <link rel="icon" href="img/logoUS.png">
+
 </head>
 
 <body>
     <div class="header" style="z-index: 100;border-bottom: 1px solid rgb(161, 161, 161, 0.5); box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.25);">
         <div class="container">
-            <a href="index.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
+            <a href="paginaUsuario.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
                 <ul class="navBarUsuario">
-                    <li><a href="simulacao.html">Questionário</a></li>
+                    <li><a href="votacao.html">Votação</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
                 </ul>
                 <div class="perfil">
@@ -81,6 +83,7 @@
             } else if (txt.length > 10){
             lettering.innerHTML = '<p style="margin-top: 45%; color: #151515;"> ' + txt + '</p>'
             }
+            txtArea.value = '';
 
                 } else {
                     throw ("Houve um erro ao tentar realizar a simulação!");
