Adicionada página de pesquisar o post e login arrumado

--- a/site/public/simulacao.html
+++ b/site/public/simulacao.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a href="paginaUsuario.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
                 <ul class="navBarUsuario">
-                    <li><a href="votacao.html">Votação</a></li>
+                    <li><a href="paginaUsuario.html">Votação</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
                 </ul>
                 <div class="perfil">
