--- a/site/public/pesquisar.html
+++ b/site/public/pesquisar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unique Style</title>
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/visualizar.css">
+    <link rel="stylesheet" href="css/pesquisar.css">
     <link rel="icon" href="img/logoUS.png">
 </head>
 
@@ -18,7 +18,7 @@
             <a href="paginaUsuario.html"><img src="img/Logo e nome.png" alt="Logo"
                     style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
             <ul class="navBarUsuario">
-                <li><a href="paginaUsuario.html">Votação</a></li>
+                <li><a href="pesquisar.html">Pesquisar</a></li>
                 <li><a href="simulacao.html">Simulação</a></li>
             </ul>
             <div class="perfil">
@@ -30,6 +30,7 @@
         </div>
     </div>
     <div class="conteudo">
+            <span>Escolha um post e pesquise por ele:</span>
             <select name="select" id="select">
                 <option value="Post 01">Post 01</option>
                 <option value="Post 02">Post 02</option>
@@ -58,15 +59,15 @@
     nomeUser.innerHTML = nome;
     function pesquisar() {
 
-        var img1 = '<img id="post01" src="img/post01.jpeg" alt="img01" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img2 = '<img id="post02" src="img/post02.jpeg" alt="img02" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img3 = '<img id="post03" src="img/post03.jpeg" alt="img03" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img4 = '<img id="post04" src="img/post04.jpeg" alt="img04" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img5 = '<img id="post05" src="img/post05.jpeg" alt="img05" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img6 = '<img id="post06" src="img/post06.jpeg" alt="img06" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img7 = '<img id="post07" src="img/post07.jpeg" alt="img07" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img8 = '<img id="post08" src="img/post08.jpeg" alt="img08" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
-        var img9 = '<img id="post09" src="img/post09.jpeg" alt="img09" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 5px #858585;">'
+        var img1 = '<img id="post01" src="img/post01.jpeg" alt="img01" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img2 = '<img id="post02" src="img/post02.jpeg" alt="img02" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img3 = '<img id="post03" src="img/post03.jpeg" alt="img03" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img4 = '<img id="post04" src="img/post04.jpeg" alt="img04" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img5 = '<img id="post05" src="img/post05.jpeg" alt="img05" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img6 = '<img id="post06" src="img/post06.jpeg" alt="img06" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img7 = '<img id="post07" src="img/post07.jpeg" alt="img07" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img8 = '<img id="post08" src="img/post08.jpeg" alt="img08" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
+        var img9 = '<img id="post09" src="img/post09.jpeg" alt="img09" style="width: 250px; height: 315px; border-radius: 10px; border: 1px #858585 solid; box-shadow: 5px 5px 12px #858585;">'
         var vtImagens = [img1, img2, img3, img4, img5, img6, img7, img8, img9];
 
 
