--- a/site/public/simulacao.html
+++ b/site/public/simulacao.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a href="paginaUsuario.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
                 <ul class="navBarUsuario">
-                    <li><a href="paginaUsuario.html">Votação</a></li>
+                    <li><a href="pesquisar.html">Pesquisar</a></li>
                     <li><a href="simulacao.html">Simulação</a></li>
                 </ul>
                 <div class="perfil">
@@ -30,7 +30,6 @@
         </div>
     </div>
     <div class="conteudo">
-
         <div class="tituloSimulacao">
             <h2>Digite uma palavra ou frase e veja como ela ficará em lettering:</h2>
         </div>
