Votação conectada à API

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -40,7 +40,7 @@
                     <input type="password" id="iptSenha" placeholder="senha">
                     <input type="password" id="iptConfirmacaoSenha" placeholder="confirmação de senha">
                 </div>
-                <a href="cadastro.html" style="margin-top: 35.1%;">Já possuo uma conta</a>
+                <a href="login.html" style="margin-top: 35.1%;">Já possuo uma conta</a>
                 <button onclick="cadastrar()" style="margin-top: 35%; z-index: 1;">Cadastrar</button>
                 <div class="imagem">
                     <img src="img/caixaLoginCadastro.png" alt="Login">
