--- a/site/public/login.html
+++ b/site/public/login.html
@@ -117,7 +117,7 @@
             console.log("ESTOU NO THEN DO entrar()!")
 
             if (resposta.ok) {
-                window.location.href = "paginaUsuario.html";
+                window.location.href = "votacao.html";
 
                 console.log(resposta);
 
