--- a/site/public/pesquisar.html
+++ b/site/public/pesquisar.html
@@ -15,14 +15,15 @@
     <div class="header"
         style="z-index: 100;border-bottom: 1px solid rgb(161, 161, 161, 0.5); box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.25);">
         <div class="container">
-            <a href="paginaUsuario.html"><img src="img/Logo e nome.png" alt="Logo"
-                    style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
+            <a href="votacao.html"><img src="img/Logo e nome.png" alt="Logo"
+                    style="width: 83%; height: 52.8%; margin-top: 20%;"></a>
             <ul class="navBarUsuario">
+                <li><a href="votacao.html">Votação</a></li>
                 <li><a href="pesquisar.html">Pesquisar</a></li>
                 <li><a href="simulacao.html">Simulação</a></li>
             </ul>
             <div class="perfil">
-                <div class="boasVindas">
+                <div class="boasVindas" style="margin-top: 0.9%;">
                     <p>Olá, <span id="nomeUsuario">usuário</span>!</p>
                     <a href="index.html">Logout</a>
                 </div>
