--- a/site/public/simulacao.html
+++ b/site/public/simulacao.html
@@ -16,14 +16,16 @@
 <body>
     <div class="header" style="z-index: 100;border-bottom: 1px solid rgb(161, 161, 161, 0.5); box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.25);">
         <div class="container">
-            <a href="paginaUsuario.html"><img src="img/Logo e nome.png" alt="Logo" style="width: 83%; height: 52.8%; margin-top: 17%;"></a>
-                <ul class="navBarUsuario">
-                    <li><a href="pesquisar.html">Pesquisar</a></li>
-                    <li><a href="simulacao.html">Simulação</a></li>
-                </ul>
-                <div class="perfil">
+            <a href="votacao.html" style="width: 15.8%; height: 58%;margin-top: 0.5%;"><img src="img/Logo e nome.png" alt="Logo"
+                    ></a>
+            <ul class="navBarUsuario" style="width: 36%; padding-right: 3%; gap: 12px;">
+                <li><a href="votacao.html">Votação</a></li>
+                <li><a href="pesquisar.html">Pesquisar</a></li>
+                <li><a href="simulacao.html">Simulação</a></li>
+            </ul>
+                <div class="perfil" style="margin-top: 1.3%;">
                     <div class="boasVindas">
-                        <p>Olá, <span id="nomeUsuario">usuário</span>!</p>
+                        <p style="margin-right: 2px;">Olá, <span id="nomeUsuario">usuário</span>!</p>
                         <a href="index.html">Logout</a>
                     </div>
                 </div>
