Tentativa de conectar a api ao gráfico

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -57,8 +57,8 @@
             </ul>
             <ul class="cards">
                 <a href="https://wa.me/11982781626"><li><img src="img/whats.png" alt="WhatsApp"></li></a>
-                <a href=""><li><img src="img/insta.png" alt="Instagram"></li></a>
-                <a href=""><li><img src="img/linkedin.png" alt="Linkedin"></li></a>
+                <a href="https://instagram.com/sofh.studies?igshid=NTc4MTIwNjQ2YQ=="><li><img src="img/insta.png" alt="Instagram"></li></a>
+                <a href="https://www.linkedin.com/in/sofhia-utaka-a4598027a"><li><img src="img/linkedin.png" alt="Linkedin"></li></a>
             </ul>
             <ul class="links">
                 <a href="#sobreMim"><li>Sobre Mim</li></a>
