--- a/site/public/votacao.html
+++ b/site/public/votacao.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/votacao.css">
         <link rel="icon" href="img/logoUS.png">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     </head>
 
     <body>
@@ -101,48 +102,48 @@
     var nome = sessionStorage.NOME_USUARIO;
     nomeUser.innerHTML = nome;
 
-    const ctx = document.getElementById('myChart');
+//     const ctx = document.getElementById('myChart');
 
-    new Chart(ctx, {
-        type: 'bar',
-        data: {
-        labels: ['Post 01', 'Post 02', 'Post 03', 'Post 04', 'Post 05', 'Post 06', 'Post 07', 'Post 08', 'Post 09'],
-    datasets: [{
-      label: 'Quantidade de votos',
-      data: [2, 1, 1, 2, 6, 3, 2, 4, 3],
-      backgroundColor: [
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000'
-    ],
-    borderColor: [
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000',
-      '#000'
-    ],
-      borderWidth: 1
-    }]
-  },
-  options: {
-    scales: {
-      y: {
-        beginAtZero: true
-      }
-    }
-  }
-});
+//     new Chart(ctx, {
+//         type: 'bar',
+//         data: {
+//         labels: ['Post 01', 'Post 02', 'Post 03', 'Post 04', 'Post 05', 'Post 06', 'Post 07', 'Post 08', 'Post 09'],
+//     datasets: [{
+//       label: 'Quantidade de votos',
+//       data: [2, 1, 1, 2, 6, 3, 2, 4, 3],
+//       backgroundColor: [
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000'
+//     ],
+//     borderColor: [
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000',
+//       '#000'
+//     ],
+//       borderWidth: 1
+//     }]
+//   },
+//   options: {
+//     scales: {
+//       y: {
+//         beginAtZero: true
+//       }
+//     }
+//   }
+// });
 
     var click = 0;
     function votar() {
@@ -205,109 +206,164 @@
         }
     }
 
-    // let proximaAtualizacao;
+    let proximaAtualizacao;
+    window.onload = obterDadosGraficos();
 
-    // window.onload = obterDadosGraficos();
-    
+    function obterDadosGraficos() {
+        obterDadosGrafico(1),
+        obterDadosGrafico(2),
+        obterDadosGrafico(3),
+        obterDadosGrafico(4),
+        obterDadosGrafico(5),
+        obterDadosGrafico(6),
+        obterDadosGrafico(7),
+        obterDadosGrafico(8),
+        obterDadosGrafico(9)
+    }
 
-    // O gráfico é construído com três funções:
-    // 1. obterDadosGrafico -> Traz dados do Banco de Dados para montar o gráfico da primeira vez
-    // 2. plotarGrafico -> Monta o gráfico com os dados trazidos e exibe em tela
-    // 3. atualizarGrafico -> Atualiza o gráfico, trazendo novamente dados do Banco
+    function obterDadosGrafico(idUsuario) {
 
-    // Esta função *obterDadosGrafico* busca os últimos dados inseridos em tabela de medidas.
-    // para, quando carregar o gráfico da primeira vez, já trazer com vários dados.
-    // A função *obterDadosGrafico* também invoca a função *plotarGrafico*
+        // alterarTitulo(idUsuario)
 
-    //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
-    //     Para ajustar o "select", ajuste o comando sql em src/models
-    // function obterDadosGrafico(idAquario) {
+        // if (proximaAtualizacao != undefined) {
+        //     clearTimeout(proximaAtualizacao);
+        // }
 
-    //     alterarTitulo(idAquario)
+        fetch(`/votacao/votar/${idUsuario}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (resposta) {
+                    console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+                    resposta.reverse();
 
-    //     if (proximaAtualizacao != undefined) {
-    //         clearTimeout(proximaAtualizacao);
-    //     }
+                    plotarGrafico(resposta, idUsuario);
+                    
+                });
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+            }
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+        }
 
-    //     fetch(`/medidas/ultimas/${idAquario}`, { cache: 'no-store' }).then(function (response) {
-    //         if (response.ok) {
-    //             response.json().then(function (resposta) {
-    //                 console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
-    //                 resposta.reverse();
+        // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
+        // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
+        // A função *plotarGrafico* também invoca a função *atualizarGrafico*
+        function plotarGrafico(resposta, idUsuario) {
 
-    //                 plotarGrafico(resposta, idAquario);
+        console.log('iniciando plotagem do gráfico...');
 
-    //             });
-    //         } else {
-    //             console.error('Nenhum dado encontrado ou erro na API');
-    //         }
-    //     })
-    //         .catch(function (error) {
-    //             console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-    //         });
-    // }
+        // Criando estrutura para plotar gráfico - labels
+        // let labels = [];
 
-    // // Esta função *plotarGrafico* usa os dados capturados na função anterior para criar o gráfico
-    // // Configura o gráfico (cores, tipo, etc), materializa-o na página e, 
-    // // A função *plotarGrafico* também invoca a função *atualizarGrafico*
-    // function plotarGrafico(resposta, idAquario) {
+        // Criando estrutura para plotar gráfico - dados
+        var dados = {
+            labels: ['Post 01', 'Post 02', 'Post 03', 'Post 04', 'Post 05', 'Post 06', 'Post 07', 'Post 08', 'Post 09'],
+            datasets: [{
+                label: 'Quantidade de votos',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(75, 192, 192)',
+            }]
+        };
 
-    //     console.log('iniciando plotagem do gráfico...');
+        console.log('----------------------------------------------')
+        console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
+        console.log(resposta)
 
-    //     // Criando estrutura para plotar gráfico - labels
-    //     let labels = [];
+        // Inserindo valores recebidos em estrutura para plotar o gráfico
+        for (i = 0; i < resposta.length; i++) {
+            var registro = resposta[i];
+            // labels.push(registro.momento_grafico);
+            dados.datasets[0].data.push(registro.Qtd_de_votos);
+            // dados.datasets[1].data.push(registro.Qtd_de_votos2);
+            // dados.datasets[2].data.push(registro.Qtd_de_votos3);
+            // dados.datasets[3].data.push(registro.Qtd_de_votos4);
+            // dados.datasets[4].data.push(registro.Qtd_de_votos5);
+            // dados.datasets[5].data.push(registro.Qtd_de_votos6);
+            // dados.datasets[6].data.push(registro.Qtd_de_votos7);
+            // dados.datasets[7].data.push(registro.Qtd_de_votos8);
+            // dados.datasets[8].data.push(registro.Qtd_de_votos9);
+        }
 
-    //     // Criando estrutura para plotar gráfico - dados
-    //     let dados = {
-    //         labels: labels,
-    //         datasets: [{
-    //             label: 'Umidade',
-    //             data: [],
-    //             fill: false,
-    //             borderColor: 'rgb(75, 192, 192)',
-    //             tension: 0.1
-    //         },
-    //         {
-    //             label: 'Temperatura',
-    //             data: [],
-    //             fill: false,
-    //             borderColor: 'rgb(199, 52, 52)',
-    //             tension: 0.1
-    //         }]
-    //     };
+        console.log('----------------------------------------------')
+        console.log('O gráfico será plotado com os respectivos valores:')
+        // console.log('Labels:')
+        // console.log(labels)
+        console.log('Dados:')
+        console.log(dados.datasets)
+        console.log('----------------------------------------------')
 
-    //     console.log('----------------------------------------------')
-    //     console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
-    //     console.log(resposta)
+        // Criando estrutura para plotar gráfico - config
+        const config = {
+            type: 'bar',
+            data: dados,
+        };
 
-    //     // Inserindo valores recebidos em estrutura para plotar o gráfico
-    //     for (i = 0; i < resposta.length; i++) {
-    //         var registro = resposta[i];
-    //         labels.push(registro.momento_grafico);
-    //         dados.datasets[0].data.push(registro.umidade);
-    //         dados.datasets[1].data.push(registro.temperatura);
-    //     }
+        // Adicionando gráfico criado em div na tela
+        let myChart = new Chart(
+            document.getElementById('myChart'),
+            config
+        );
+        myChart.update();
 
-    //     console.log('----------------------------------------------')
-    //     console.log('O gráfico será plotado com os respectivos valores:')
-    //     console.log('Labels:')
-    //     console.log(labels)
-    //     console.log('Dados:')
-    //     console.log(dados.datasets)
-    //     console.log('----------------------------------------------')
+        setTimeout(() => atualizarGrafico(idUsuario, dados, myChart), 200);
+        }
 
-    //     // Criando estrutura para plotar gráfico - config
-    //     const config = {
-    //         type: 'line',
-    //         data: dados,
-    //     };
+        function atualizarGrafico(idAquario, dados, myChart) {
 
-    //     // Adicionando gráfico criado em div na tela
-    //     let myChart = new Chart(
-    //         document.getElementById(`myChartCanvas${idAquario}`),
-    //         config
-    //     );
 
-    //     setTimeout(() => atualizarGrafico(idAquario, dados, myChart), 2000);
-    // }
+
+fetch(`/votacao/votar/${idUsuario}`, { cache: 'no-store' }).then(function (response) {
+    if (response.ok) {
+        response.json().then(function (novoRegistro) {
+
+            obterdados(idUsuario);
+            // alertar(novoRegistro, idUsuario);
+            console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+            console.log(`Dados atuais do gráfico:`);
+            console.log(dados);
+
+            let avisoCaptura = document.getElementById(`avisoCaptura${idUsuario}`)
+            avisoCaptura.innerHTML = ""
+
+
+            if (novoRegistro[0].momento_grafico == dados.labels[dados.labels.length - 1]) {
+                console.log("---------------------------------------------------------------")
+                console.log("Como não há dados novos para captura, o gráfico não atualizará.")
+                avisoCaptura.innerHTML = "<i class='fa-solid fa-triangle-exclamation'></i> Foi trazido o dado mais atual capturado pelo sensor. <br> Como não há dados novos a exibir, o gráfico não atualizará."
+                console.log("Horário do novo dado capturado:")
+                console.log(novoRegistro[0].momento_grafico)
+                console.log("Horário do último dado capturado:")
+                console.log(dados.labels[dados.labels.length - 1])
+                console.log("---------------------------------------------------------------")
+            } else {
+                // tirando e colocando valores no gráfico
+                dados.labels.shift(); // apagar o primeiro
+                dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
+
+                dados.datasets[0].data.shift();  // apagar o primeiro de umidade
+                dados.datasets[0].data.push(novoRegistro[0].Qtd_de_votos); // incluir uma nova medida de umidade
+
+                // dados.datasets[1].data.shift(); 
+                // dados.datasets[1].data.push(novoRegistro[0].temperatura); 
+
+                myChart.update();
+            }
+
+            // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+            proximaAtualizacao = setTimeout(() => atualizarGrafico(idUsuario, dados, myChart), 200);
+        });
+    } else {
+        console.error('Nenhum dado encontrado ou erro na API');
+        // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+        proximaAtualizacao = setTimeout(() => atualizarGrafico(idUsuario, dados, myChart), 200);
+    }
+})
+    .catch(function (error) {
+        console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+    });
+
+}
 </script>
